implemented-api-genres
